# pandas-msgpack

./: .gitignore  .hgignore  .travis.yml  MANIFEST.in  README.rst  appveyor.yml  dev-requirements.txt  publish.sh  setup.cfg  setup.py  test.bat  test.sh
.github/workflows/: make-wheels.yml
ci/: build_wheels.sh  install_travis.sh
docs/source/: api.rst  compression.rst  index.rst  tutorial.rst
mbf_pandas_msgpack/: __init__.py  packers.py
mbf_pandas_msgpack/msgpack/: _packer.cpp  _packer.pyx  _unpacker.cpp  _unpacker.pyx
mbf_pandas_msgpack/tests/: test_packers.py
pandas_msgpack/: __init__.py  _version.py  packers.py
pandas_msgpack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pandas_msgpack/msgpack/: __init__.py  __init__.py.orig  _packer.cpp  _packer.pyx  _unpacker.cpp  _unpacker.pyx
pandas_msgpack/tests/: test_packers.py
