
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[metadata]
name = pandas-msgpack
description = various file formats
version=0.1
author = Florian Finkernagel
author-email = finkernagel@imt.uni-marburg.de
#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = pandas_msgpack/_version.py
#versionfile_build = pandas_msgpack/_version.py
#tag_prefix =
#parentdir_prefix = pandas_msgpack-

[flake8]
ignore = E731
