
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[metadata]
name = mbf_pandas-msgpack
description = support for msgpack format in pandas backported for post 2020 pandas (butchered, but working version)
version=0.1
author = Florian Finkernagel
author-email = finkernagel@imt.uni-marburg.de
#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = mbf_pandas_msgpack/_version.py
#versionfile_build = mbf_pandas_msgpack/_version.py
#tag_prefix =
#parentdir_prefix = mbf_pandas_msgpack-

[flake8]
ignore = E731
